RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Entry__c/AI_Conversation_Entry__c.object-meta.xml
<CustomObject>
    <description>Individual conversation entries within an AI conversation session</description>
    <label>AI Conversation Entry</label>
    <nameField>
        <displayFormat>MSG-{0000000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Conversation Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>