RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Entry__c/fields/Entry_Number__c.field-meta.xml
<CustomField>
    <fullName>Entry_Number__c</fullName>
    <description>Sequential number of this entry in the conversation</description>
    <label>Entry Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>