RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Entry__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <description>The actual message content</description>
    <label>Message Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>