RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Entry__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description>Type of message in the conversation</description>
    <label>Message Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Bot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>