RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Entry__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <description>JSON metadata for additional information (sentiment, confidence, etc.)</description>
    <label>Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>