RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Entry__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <description>Parent conversation session</description>
    <label>Session</label>
    <referenceTo>AI_Conversation_Session__c</referenceTo>
    <relationshipLabel>Conversation Entries</relationshipLabel>
    <relationshipName>Conversation_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>