RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Entry__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>When this entry was created</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>